--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,7 @@ spring.h2.console.path=/h2-console
 
 handlebars.suffix=.html
 handlebars.cache=false
+handlebars.expose-session-attributes=true
 
 livereload.enable=true
-freemarker.cache=false 
-
-spring.mustache.expose-session-attributes=true
+freemarker.cache=false
